--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "keywords": [],
   "scripts": {
     "build": "run-p build:*",
-    "build:main": "tsc -p tsconfig.json",
-    "build:module": "tsc -p tsconfig.module.json",
+    "build:main": "tsc -p tsconfig.json && run-p copy-files:main",
+    "build:module": "tsc -p tsconfig.module.json && run-p copy-files:module",
+    "copy-files:main": "copyfiles -u 1 src/**/*.religo src/**/*.json src/**/*.tz src/**/*.png build/main",
+    "copy-files:module": "copyfiles -u 1 src/**/*.religo src/**/*.json src/**/*.tz src/**/*.png build/module",
     "fix": "run-s fix:*",
     "fix:prettier": "prettier \"src/**/*.ts\" --write",
     "fix:lint": "eslint src --ext .ts --fix",
@@ -48,7 +50,8 @@
     "node": ">=10"
   },
   "dependencies": {
-    "@bitauth/libauth": "^1.17.1"
+    "@pinata/sdk": "^1.1.23",
+    "ipfs-unixfs-importer": "^9.0.6"
   },
   "devDependencies": {
     "@ava/typescript": "^1.1.1",
@@ -58,6 +61,7 @@
     "@typescript-eslint/parser": "^4.0.1",
     "ava": "^3.12.1",
     "codecov": "^3.5.0",
+    "copyfiles": "^2.4.1",
     "cspell": "^4.1.0",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^7.8.0",
@@ -79,7 +83,6 @@
     "build/main",
     "build/module",
     "!**/*.spec.*",
-    "!**/*.json",
     "CHANGELOG.md",
     "LICENSE",
     "README.md"
